--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -1,7 +1,9 @@
 /* Custom container */
 .container-narrow {
   margin: 0 auto;
-  max-width: 960px; }
+  max-width: 960px; 
+  line-height: 30px;  
+ }
 
 .container-narrow > hr {
   margin: 30px 0; }
