--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{{ page.title }} Naibao Zhao</title>
+    <title>{{ page.title }} Yongzhi Sun</title>
     {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
     {% if page.keywords %}<meta name="keywords" content="{{ page.keywords }}">{% endif %}
     <meta name="author" content="{{ site.author.name }}">
@@ -21,7 +21,7 @@
     <link href="{{ ASSET_PATH }}/css/kbroman.css" rel="stylesheet" type="text/css" media="all">
 
     <!-- Le fav and touch icons -->
-    <link rel="SHORTCUT ICON" href="{{ BASE_PATH }}/assets/tamu_logobox_450.ico"/>
+      <!-- <link rel="SHORTCUT ICON" href="{{ BASE_PATH }}/assets/tamu_logobox_450.ico"/> -->
 
     <!-- atom & rss feed -->
     <link href="{{ BASE_PATH }}{{ site.JB.atom_path }}" type="application/atom+xml" rel="alternate" title="Sitewide ATOM Feed">
@@ -50,9 +50,10 @@
               <li><a href="{{ BASE_PATH }}/pages/talks.html">talks</a></li>
               <li><a href="{{ BASE_PATH }}/pages/software.html">software</a></li>  
               <li><a href="{{ BASE_PATH }}/curriculum_vitae.html">curriculum vitae</a></li>  -->
-              <li><a href="{{ BASE_PATH }}/research.html">research</a></li>
-              <li><a href="{{ BASE_PATH }}/teaching.html">teaching</a></li>
-              <li><a href="{{ BASE_PATH }}/">curriculum vitae</a></li>
+              <li><a href="{{ BASE_PATH }}/index.html">About</a></li>
+              <li><a href="{{ BASE_PATH }}/research.html">Research</a></li>
+              <li><a href="{{ BASE_PATH }}/teaching.html">Teaching</a></li>
+              <li><a href="{{ BASE_PATH }}/">cv</a></li>
               <li><a href="{{ BASE_PATH }}/SSSI.html">HCEO-RIEM SSSI Chengdu</a></li>
           </ul>
         </div>
