--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -6,10 +6,9 @@
     {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
     {% if page.keywords %}<meta name="keywords" content="{{ page.keywords }}">{% endif %}
     <meta name="author" content="{{ site.author.name }}">
-    <!-- <meta name="description" content="Naibao Zhao - PhD candidate in the Department of Economics at Texas A&M University" />
     <!-- Enable responsive viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    <meta name="keywords" content="Naibao Zhao, Naibao, Economics, Economist, Texas A&M University, Texas A&M, TAMU, University of Chicago, U of C,  UChicago, Research Institute of Economics and Management, RIEM, Southwestern University of Finance and Economics, SWUFE" />
+    <meta name="keywords" content="Yongzhi Sun, Economics, Texas A&M University, Texas A&M, TAMU, Fudan, Research Institute of Economics and Management, RIEM, Southwestern University of Finance and Economics, SWUFE" />
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
