--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -52,7 +52,7 @@
               <li><a href="{{ BASE_PATH }}/index.html">About</a></li>
               <li><a href="{{ BASE_PATH }}/research.html">Research</a></li>
               <li><a href="{{ BASE_PATH }}/teaching.html">Teaching</a></li>
-              <li><a href="{{ BASE_PATH }}/">CV</a></li>
+              <li><a href="{{ BASE_PATH }}/ysun.pdf">CV</a></li>
               <li><a href="{{ BASE_PATH }}/SSSI.html">HCEO-RIEM SSSI Chengdu</a></li>
           </ul>
         </div>
